EXTRA_DIST = \
HOWTO \
asymmetric.py \
common.sh \
difference.py \
game.py \
gameplayer.py \
program.py \
run-prog-vs-prog.sh \
statistics.py \
summary.py \
tournament.py \
twogtp.py \
openings/size10-all-1ply \
openings/size11-all-1ply \
openings/size13-all-1ply \
openings/size7-all-1ply \
openings/size8-all-1ply \
openings/size9-all-1ply
